# sru-robot-deployment

./: README.md
b2w_sim/: .gitignore  CLAUDE.md  README.md
b2w_sim/b2w_collision_monitor/: CMakeLists.txt  REFACTOR_SUMMARY.md  package.xml  plugin_description.xml
b2w_sim/b2w_collision_monitor/include/b2w_collision_monitor/: collision_detector.h
b2w_sim/b2w_collision_monitor/src/: collision_detector.cpp
b2w_sim/b2w_controllers/: CMakeLists.txt  package.xml
b2w_sim/b2w_controllers/config/: b2w_controllers.yaml
b2w_sim/b2w_controllers/include/b2w_controllers/: b2w_controllers.hpp
b2w_sim/b2w_controllers/src/: b2w_controllers.cpp
b2w_sim/b2w_controllers/src/policy/: policy_force_new.onnx
b2w_sim/b2w_description_ros2/: CMakeLists.txt  package.xml
b2w_sim/b2w_description_ros2/env_hooks/: b2w_description_ros2.dsv.in
b2w_sim/b2w_description_ros2/launch/: load.launch.py
b2w_sim/b2w_description_ros2/urdf/: b2w_description_rsl.urdf
b2w_sim/b2w_gazebo_ros2/: CMakeLists.txt  package.xml
b2w_sim/b2w_gazebo_ros2/config/: b2w_gz_bridge.yaml
b2w_sim/b2w_gazebo_ros2/launch/: b2w_gazebo.launch.py  gazebo.launch.py
b2w_sim/b2w_gazebo_ros2/rviz/: demo.rviz  smb_tf.rviz
b2w_sim/b2w_gazebo_ros2/worlds/: empty.world  playground.world  warehouse.world
b2w_sim/b2w_joystick_control/: CMakeLists.txt  package.xml
b2w_sim/b2w_joystick_control/config/: ps5_config.yaml
b2w_sim/b2w_joystick_control/launch/: joystick_teleop.launch.py
b2w_sim/b2w_joystick_control/scripts/: keyboard_teleop_tk.py
b2w_sim/b2w_sim_worlds/: CMakeLists.txt  package.xml
b2w_sim/b2w_sim_worlds/models/ISAACLAB_TRAIN/: model.config  model.sdf
b2w_sim/b2w_sim_worlds/src/: publish_mesh_node.cpp
b2w_sim/b2w_sim_worlds/worlds/: ISAACLAB_TRAIN.world
rl_nav_controller/: README.md
rl_nav_controller/rl_nav_controller/: rl_nav_controller.py
